--- a/pom.xml
+++ b/pom.xml
@@ -56,10 +56,9 @@
 
 
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
-
 
 
         <dependency>
