--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,24 @@
-spring.datasource.url=jdbc:h2:mem:db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://aws.connect.psdb.cloud/blood-bank?sslMode=VERIFY_IDENTITY
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.username=vkqjot286dxkii1hlcsq
+spring.datasource.password=pscale_pw_DbtZXe7VHCDoEonDEWvBkMsFtA3D6fUvN50hOVhMK0w
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# apontamos para o JPA e Hibernate qual é o Dialeto do banco de dados
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-spring.jpa.properties.hibernate.show_sql=true
+# deixamos o hibernate responsável por ler nossas entidades e criar as tabelas do nosso banco de dados automaticamente
+#spring.jpa.hibernate.ddl-auto=create
+# configuração do Hibernate para reconhecer o nome de tabelas em caixa alta
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# configurações de log
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
 
 security.jwt.signing-key=byBzb2wgbsOjbyDDqSBhenVs
+
+security.oauth2.client.scope=password
